--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
         uses: docker/build-push-action@v2.7.0
         with:
           context: .
-          file: /.Dockerfile
+          file: ./Dockerfile
   CD:
     runs-on: ubuntu-latest
     steps:
