--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,27 +2,26 @@ on:
   push:
     branches:
       - "master"
+  page_build:
 
 jobs:
-  BUILD:
+  CI:
     runs-on: ubuntu-latest
-
     steps:
+      - name: Checkout
       - uses: actions/checkout@v2
       
       - name: Docker Build
         uses: docker/build-push-action@v2.7.0
         with:
           context: .
-          file: ./Dockerfile
-  CD:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          file: ./dockerfile
 
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: github-pages
+          folder: build
 
         
           
