--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,6 @@ on:
   push:
     branches:
       - "master"
-  page_build:
 
 jobs:
   CI:
@@ -13,9 +12,7 @@ jobs:
       
       - name: Docker Build
         uses: docker/build-push-action@v2.7.0
-        with:
-          context: .
-          file: ./dockerfile
+        run: docker build . --file dockerfile
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
