--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,11 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       
       - name: Docker Build
         uses: docker/build-push-action@v2.7.0
-        run: docker build . --file dockerfile
+        with:
+          context: .
+          file: ./dockerfile
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
